--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
       {
         "src": "prisma/schema.prisma",
-        "use": "@prisma/cli",
+        "use": "@prisma/client",
         "config": { "command": "prisma generate" } 
       },
       {
